src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/bound_reduction2.rs:16:46
   |
LL | fn foo_desugared<T: TraitWithAssoc>(_: T) -> Foo<T::Assoc> {
   |                                              ^^^^^^^^^^^^^
   |
note: used non-generic type `<T as TraitWithAssoc>::Assoc` for generic parameter
  --> $DIR/bound_reduction2.rs:9:10
   |
LL | type Foo<V> = impl Trait<V>;
   |          ^

error: could not find defining uses
  --> $DIR/bound_reduction2.rs:9:15
   |
LL | type Foo<V> = impl Trait<V>;
   |               ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

